fix vercel.json config

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "output": "output",
+    "outputDirectory": "output",
     "builds": [
         {
             "src": "*.py",
